======================
    ADDED: A Safari-like Jump-Back feature (Ctrl-J and in the bookmark-menu)
    ADDED: CTRL-L shortcut to go to the location bar (origin) as in firefox and konqueror
    ADDED: filters for selecting files
    FIXED: problems with moving to trash at virt_fs and diskusage module
    FIXED: gcc 2.95 compiler fix
    FIXED: changed locate-gui shortcut from ctrl-l to shift+ctrl+l
    FIXED: bookmark icons were not saved correctly

  UPDATED: Slovenian translation (thanks Matej Urbancic)
  UPDATED: German translation


1.60.0
======================
    ADDED: New Gorilla-style icon by www.OnExige.com

    FIXED: Crash if the useractions.xml contains invalid data
    FIXED: quick selection doesn't work
    FIXED: synchronizer, content filter doesn't work
    FIXED: synchronizer, consistency bug of the filter combos
    FIXED: advanced filter hides the searcher window at errors
    FIXED: combiner, smoother interoperability with Total Commander
    FIXED: UserActionMenu gets updated after Konfigurator applys
    FIXED: can't sort by extension when "Case Sensitive sort" is on
    FIXED: move to trash didn't work on kde 3.4.0
    FIXED: [ 1123995 ] custom selection mode misfunction

  UPDATED: Italian translation (thanks Giuseppe Bordoni)
  UPDATED: Hungarian translation (thanks Arpad Biro)
  UPDATED: Chinese Simplified translation (thanks Jinghua Luo)
  UPDATED: Bulgarian translation (thanks Milen Ivanov)


1.60.0-beta2
======================
    FIXED: devices:/ is changed to media:/ in 3.4
    FIXED: konfigurator crash on KDE 3.4 at checking 'save settings'
    FIXED: no refresh after splitting files
    FIXED: splitter doesn't handle sizes bigger than 2 GB properly
    FIXED: problem at restart if virtual folders were saved at last exit
    FIXED: locate / search feed to listbox number generation


1.60.0-beta1
======================
    ADDED: useraction: new placeholder: %_ListFile()%
    ADDED: total commander color scheme