@@ -1,4 +1,5 @@
 ======================
+    ADDED: vertical mode is saved with 'ui save settings' or 'save position' and restored
     ADDED: A Safari-like Jump-Back feature (Ctrl-J and in the bookmark-menu)
     ADDED: CTRL-L shortcut to go to the location bar (origin) as in firefox and konqueror
     ADDED: filters for selecting files
